<resources>
    <string name="app_name">Kumsia</string>
    <string name="old_people_meeting">Old people meeting</string>
    <string name="kumsia">KUMSIA</string>
    <string name="app_logo">App logo</string>
    <string name="briding_generations_building_friendships">Briding Generations, Building Friendships</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="individual_role_account">Make new friends and connect with people through social events</string>
    <string name="organization_role_account">Manage and create your social events to help people connect with each other</string>
    <string name="individual_role_tile">Individual</string>
    <string name="organization_role_tile">Organization</string>
    <string name="input_can_t_be_empty">Input can\'t be empty. Please check it again.</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="organization">Organization</string>
    <string name="individual">Individual</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="organization_name">Organization Name</string>
    <string name="upcoming_social_events">Upcoming Social Events</string>
    <string name="event_photo">Event photo</string>
    <string name="bincang_bincang_masak">Bincang-Bincang Masak</string>
    <string name="date">6 Juni 2024</string>
    <string name="detail">Detail</string>
    <string name="social_event_drafts">Social Event Drafts</string>
    <string name="sign_out">Sign Out</string>
    <string name="blabla_gmail_com">blabla@gmail.com</string>
    <string name="established_date">Established Date</string>
    <string name="type">Type</string>
    <string name="panti_jompo">Panti Jompo</string>
    <string name="contact">Contact</string>
    <string name="contact_number">0812345679803</string>
    <string name="random_description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at enim eget ipsum varius sodales nec sit amet sapien. Nulla consectetur ipsum sapien, a pellentesque quam aliquam sit amet. Praesent nec aliquet purus. Sed nec bibendum dui, at elementum nulla. In dui lorem, convallis eu faucibus nec, tincidunt eu justo. Integer consectetur quam nibh, non suscipit nunc posuere ac. Maecenas eu neque id tortor porttitor faucibus eget vitae lacus. </string>
    <string name="description">Description</string>
    <string name="add_event">+ Add Event</string>
    <string name="add_event_title">Add Event</string>
    <string name="enter_the_event_name">Enter the event name</string>
    <string name="location">Location (Address)</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="status">Status</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="enter_the_link_of_the_event">Enter the link of the event</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="date_and_time">Date and Time</string>
    <string name="choose">Choose</string>
    <string name="city">City</string>
    <string name="enter_the_capacity">Enter the capacity</string>
    <string name="capacity">Capacity</string>
    <string name="enter_the_contact_whatsapp_group_link">Enter the contact/WhatsApp group link</string>
    <string name="contact_whatsapp_group">Contact/WhatsApp Group</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="enter_the_attendee_criteria">Enter the attendee criteria</string>
    <string name="attendee_criteria">Attendee Criteria</string>
    <string name="choose_the_city">Choose the city</string>
    <string name="search_the_city">Search the city</string>
    <string name="preferences">Preferences</string>
    <string name="next">Next</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="event_preferences">Event Preferences</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="religion">Religion</string>
    <string name="islam">Islam</string>
    <string name="protestantism">Protestantism</string>
    <string name="catholicism">Catholicism</string>
    <string name="buddhism">Buddhism</string>
    <string name="hinduism">Hinduism</string>
    <string name="confucianism">Confucianism</string>
    <string name="hobbies_and_interests">Hobbies and Interests</string>
    <string name="add_city">+ Add City</string>
    <string name="submit">Submit</string>
    <string name="like_counts">505</string>
    <string name="canceled">Canceled</string>
    <string name="username">Username</string>
    <string name="patijompo_rawabelong">patijompo.rawabelong</string>
    <string name="date_time_event">6 June 2024, 10:00</string>
    <string name="organized_by">Organized by:</string>
    <string name="pati_jompo_rawabelong">Pati Jompo Rawabelong</string>
    <string name="capacity_title">Capacity:</string>
    <string name="capacity_value">50</string>
    <string name="location_value">Jl. Pegangsaan Timur No. 56, Jakarta</string>
    <string name="attendee_criteria_value">Love to cook and hang out with new friends</string>
    <string name="whatsapp_group_link">WhatsApp Group Link</string>
    <string name="none">-</string>
    <string name="religion_title">Religion:</string>
    <string name="gender_title">Gender:</string>
    <string name="interests_value">Food, Cooking</string>
    <string name="interests_title">Hobbies and Interests:</string>
    <string name="city_title">City:</string>
    <string name="comments">Comments</string>
    <string name="view_comments">View Comments</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="user_name">Marianne Sheridan</string>
    <string name="time">11 Jun, 11:15</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="enter_your_username_here">Enter your username here</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="choose_date_of_birth">Choose date of birth</string>
    <string name="choose_gender">Choose gender</string>
    <string name="choose_the_gender">Choose the gender</string>
    <string name="search_the_gender">Search the gender</string>
    <string name="input_is_invalid">Input is invalid. Please check it again.</string>
    <string name="input_cant_be_empty">Input can\'t be empty. Please check it again.</string>
    <string name="friends">Friends</string>
    <string name="complete_your_data">Complete Your Data</string>
    <string name="skip">Skip</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="enter_your_contact_number">Enter your contact number</string>
    <string name="save">Save</string>
    <string name="choose_religion">Choose religion</string>
    <string name="guardian_contact">Guardian Contact (Optional)</string>
    <string name="enter_your_guardian_contact_number">Enter your guardian contact number</string>
    <string name="choose_preferences">Choose Preferences</string>
    <string name="update_event">Update Event</string>
    <string name="friends_recommendation">Friends Recommendation</string>
    <string name="find_your_new_friends_today">Find your new friends today!</string>
    <string name="age_value">%1$d years old</string>
    <string name="social_events">Social Events</string>
    <string name="join_social_events_and_meet_people">Join social events and meet people!</string>
    <string name="my_event_history">My Event History</string>
    <string name="personal_contact_title">Personal Contact</string>
    <string name="guardian_contact_title">Guardian Contact</string>
    <string name="edit">Edit</string>
</resources>