<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.individual.profile.IndividualProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:paddingBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/blue_button_style"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:text="@string/sign_out"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="@+id/profile_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_title"
                app:layout_constraintVertical_bias="0.0" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="136dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="228dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/blue_button_style"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_button" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/patijompo_rawabelong"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/username_title"
                app:layout_constraintTop_toBottomOf="@+id/username_title" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/email_title"
                app:layout_constraintTop_toBottomOf="@+id/email_title" />

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@array/gender_array"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/gender_title"
                app:layout_constraintTop_toBottomOf="@+id/gender_title" />

            <TextView
                android:id="@+id/dob_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/date"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/dob_title"
                app:layout_constraintTop_toBottomOf="@+id/dob_title" />

            <TextView
                android:id="@+id/religion_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/religion"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/dob"
                app:layout_constraintTop_toBottomOf="@+id/dob" />

            <TextView
                android:id="@+id/religion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/religion"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/religion_title"
                app:layout_constraintTop_toBottomOf="@+id/religion_title" />

            <TextView
                android:id="@+id/city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/religion"
                app:layout_constraintTop_toBottomOf="@+id/religion" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/city"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/city_title"
                app:layout_constraintTop_toBottomOf="@+id/city_title" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/city"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="4dp"
                android:text="@string/random_description"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/description_title"
                app:layout_constraintTop_toBottomOf="@+id/description_title" />

            <TextView
                android:id="@+id/personal_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/personal_contact_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/personal_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/contact_number"
                android:textSize="20sp"
                android:textColor="@color/light_blue"
                app:layout_constraintStart_toStartOf="@+id/personal_contact_title"
                app:layout_constraintTop_toBottomOf="@+id/personal_contact_title" />

            <TextView
                android:id="@+id/guardian_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/guardian_contact_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/personal_contact"
                app:layout_constraintTop_toBottomOf="@+id/personal_contact" />

            <TextView
                android:id="@+id/guardian_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/contact_number"
                android:textSize="20sp"
                android:textColor="@color/light_blue"
                app:layout_constraintStart_toStartOf="@+id/guardian_contact_title"
                app:layout_constraintTop_toBottomOf="@+id/guardian_contact_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>